[gd_scene load_steps=6 format=3 uid="uid://bflouk86od5uf"]

[ext_resource type="Script" path="res://script/personajes/personaje.gd" id="1_wsq18"]
[ext_resource type="Script" path="res://script/dialogos/modelo_dialogo.gd" id="2_qhnj3"]
[ext_resource type="Texture2D" uid="uid://de31ms55cep3k" path="res://Assets/DibujosNV/Personajes/blanca1.png" id="3_so0w4"]
[ext_resource type="Script" path="res://script/personajes/modelo_rpg.gd" id="4_bamkj"]
[ext_resource type="Script" path="res://script/personajes/modelo_combate.gd" id="5_282dh"]

[node name="Blanca" type="Node" node_paths=PackedStringArray("modelo_dialogo", "modelo_rpg", "modelo_combate")]
script = ExtResource("1_wsq18")
modelo_dialogo = NodePath("ModeloDialogo")
modelo_rpg = NodePath("ModeloRPG")
modelo_combate = NodePath("ModeloCombate")

[node name="ModeloDialogo" type="Node2D" parent="."]
script = ExtResource("2_qhnj3")

[node name="Neutral" type="Sprite2D" parent="ModeloDialogo"]
position = Vector2(0, -768)
texture = ExtResource("3_so0w4")

[node name="ModeloRPG" type="CharacterBody2D" parent="."]
z_index = 1
y_sort_enabled = true
script = ExtResource("4_bamkj")

[node name="ModeloCombate" type="Node2D" parent="."]
script = ExtResource("5_282dh")
